# VolunteerManagementSystem

./: CMakeLists.txt  VolunteerInfo.txt  main.c
http/: GET.c  Init.c  POST.c  Routes.c  Send.c  Web.h
src/: Trie.txt  VolunteerInfo.txt  raceInfo.txt  raceToVolunteer.txt  volunteerInfo.txt  volunteerRequest.txt  volunteerToRace.txt
src/http/: GET.c  POST.c  Routes.c  Send.c  Tool.c  Web.h
src/volunteer/: Crud.c  Map.c  Volunteer.h  volunteer.c
volunteer/: Crud.c  Volunteer.c  Volunteer.h
前端/first/: first.css  first.html
前端/forth/: forth.css  forth.html
前端/home/: home.css  home.html
前端/second/: second.html
前端/third/: third.css  third.html
